--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,6 +2,10 @@
     animation: animation 1s linear infinite alternate;
 }
 
+.my_cursor{
+    cursor: url('../assets/cursor.png'), auto;
+}
+
 @keyframes animation {
     0%{
         height: 20px;
